--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,5 +1,6 @@
 @import url("./home-page-header.css");
 @import url("./home-page-hero.css");
+@import url("./home-page-section3.css");
 
 @import url("./location.css");
 @import url("./locationmobile.css");
