--- a/src/partials/hotel-page-section1.html
+++ b/src/partials/hotel-page-section1.html
@@ -22,8 +22,8 @@
       </div>
       <div class="double-lux-group-second">
         <div class="room__slider double-lux__slider">
-          <img class="room__slider-first" src="./img/section1-img/hotel-foto2.jpg" alt="двомісний номер" width="194">
-          <img class="room__slider-second" src="./img/section1-img/hotel-foto3.jpg" alt="двомісний номер" width="194">
+          <img class="room__slider-first" src="./img/section1-img/hotel-foto2.jpg" alt="двомісний номер">
+          <img class="room__slider-second" src="./img/section1-img/hotel-foto3.jpg" alt="двомісний номер">
         </div>
         <ul class="rooms__arrow double-lux__arrow">
           <li>
