--- a/src/partials/home-page-section3.html
+++ b/src/partials/home-page-section3.html
@@ -8,7 +8,7 @@
         sint. Velit officia consequat duis enim velit mollit. Exercitation
         veniam consequat sunt nostrud amet.
       </p>
-      <img src="../img/section3-img/section3-foto1.jpg" alt="room" class="section3-foto1" width="244" height="322" />
+      <img src="./img/section3-img/section3-foto1.jpg" alt="room" class="section3-foto1" width="244" height="322" />
     </div>
     <div class="section3-bottom-wrap">
       <div class="wrap-group1">
@@ -17,18 +17,18 @@
           amet sint. Velit officia consequat duis enim velit mollit.
           Exercitation veniam consequat sunt nostrud amet.
         </p>
-        <img src="../img/section3-img/section3-foto2.jpg" alt="restaurant" class="section3-foto2" width="200"
+        <img src="./img/section3-img/section3-foto2.jpg" alt="restaurant" class="section3-foto2" width="200"
           height="278" />
       </div>
 
       <div class="wrap-group2">
         <ul class="section3-image-list">
           <li class="section3-image-item">
-            <img src="../img/section3-img/section3-foto3.jpg" alt="photo" class="section3-foto3" width="245"
+            <img src="./img/section3-img/section3-foto3.jpg" alt="photo" class="section3-foto3" width="245"
               height="245" />
           </li>
           <li class="section3-image-item">
-            <img src="../img/section3-img/section4-foto4.jpg" alt="photo" class="section3-foto4" width="245"
+            <img src="./img/section3-img/section4-foto4.jpg" alt="photo" class="section3-foto4" width="245"
               height="245" />
           </li>
         </ul>
@@ -36,12 +36,12 @@
         <div class="section3-arrows">
           <button type="button" class="section3-button left">
             <svg class="section3-arrow icon" width="32" height="32">
-              <use href="../img/icons-sprite.svg#icon-left-arrow-slider"></use>
+              <use href="./img/icons-sprite.svg#icon-left-arrow-slider"></use>
             </svg>
           </button>
           <button type="button" class="section3-button right">
             <svg class="section3-arrow icon" width="32" height="32">
-              <use href="../img/icons-sprite.svg#icon-rigth-arrow-slider"></use>
+              <use href="./img/icons-sprite.svg#icon-rigth-arrow-slider"></use>
             </svg>
           </button>
         </div>
