--- a/src/partials/hotel-page-section1.html
+++ b/src/partials/hotel-page-section1.html
@@ -38,7 +38,7 @@
           </li>
         </ul>
         <ul class="rooms__buttons">
-          <li><button class="rooms__button rooms__button-first">Детальніше</button></li>
+          <li><a href="./room.html"><button class="rooms__button rooms__button-first">Детальніше</button></a></li>
           <li><button class="rooms__button">Переглянути ціни</button></li>
         </ul>
       </div>
@@ -83,8 +83,8 @@
             </li>
           </ul>
           <ul class="rooms__buttons">
-            <li><button class="rooms__button rooms__button-first">Детальніше</button></li>
-            <li><button class="rooms__button">Переглянути ціни</button></li>
+            <li><a href="./room.html"><button class="rooms__button rooms__button-first">Детальніше</button></a></li>
+            <li><a href=""><button class="rooms__button">Переглянути ціни</button></a></li>
           </ul>
         </div>
       </div>
@@ -129,7 +129,7 @@
           </li>
         </ul>
         <ul class="rooms__buttons">
-          <li><button class="rooms__button rooms__button-first">Детальніше</button></li>
+          <li><a href="./room.html"><button class="rooms__button rooms__button-first">Детальніше</button></a></li>
           <li><button class="rooms__button">Переглянути ціни</button></li>
         </ul>
       </div>
