--- a/src/partials/home-page-section3.html
+++ b/src/partials/home-page-section3.html
@@ -1,68 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-    />
-    <link rel="stylesheet" href="../css/reset.css" />
-    <link rel="stylesheet" href="../css/index.css" />
-
-    <link rel="stylesheet" href="../css/home-page-section3.css" />
-  </head>
-  <body>
-    <section class="homepage-section3">
-      <div class="container-section3">
-        <div class="section3-top-wrap">
-          <h2 class="section3-pre-title">Amet minim mollit non</h2>
-          <h2 class="section3-logo">MIMIHO</h2>
-          <p class="section3-description">
-            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
-            sint. Velit officia consequat duis enim velit mollit. Exercitation
-            veniam consequat sunt nostrud amet.
-          </p>
-          <img
-            src="../img/section3-img/section3-foto1.jpg"
-            alt="room"
-            class="section3-foto1"
-            width="244"
-            height="322"
-          />
-        </div>
-        <div class="section3-bottom-wrap">
-          <div class="wrap-group1">
-            <p class="section3-description2">
-              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-              amet sint. Velit officia consequat duis enim velit mollit.
-              Exercitation veniam consequat sunt nostrud amet.
-            </p>
-            <img
-              src="../img/section3-img/section3-foto2.jpg"
-              alt="restaurant"
-              class="section3-foto2"
-              width="200"
-              height="278"
-            />
-          </div>
+<section class="homepage-section3">
+  <div class="container-section3">
+    <div class="section3-top-wrap">
+      <h2 class="section3-pre-title">Amet minim mollit non</h2>
+      <h2 class="section3-logo">MIMIHO</h2>
+      <p class="section3-description">
+        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+        sint. Velit officia consequat duis enim velit mollit. Exercitation
+        veniam consequat sunt nostrud amet.
+      </p>
+      <img src="../img/section3-img/section3-foto1.jpg" alt="room" class="section3-foto1" width="244" height="322" />
+    </div>
+    <div class="section3-bottom-wrap">
+      <div class="wrap-group1">
+        <p class="section3-description2">
+          Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+          amet sint. Velit officia consequat duis enim velit mollit.
+          Exercitation veniam consequat sunt nostrud amet.
+        </p>
+        <img src="../img/section3-img/section3-foto2.jpg" alt="restaurant" class="section3-foto2" width="200"
+          height="278" />
+      </div>
 
       <div class="wrap-group2">
         <ul class="section3-image-list">
@@ -89,7 +46,4 @@
           </button>
         </div>
       </div>
-    </section>
-  </body>
-</html>
-
+</section>
