--- a/src/partials/home-page-section2.html
+++ b/src/partials/home-page-section2.html
@@ -8,18 +8,18 @@
         mollit.</p>
     </div>
     <div class="food-pictures">
-      <img class="img5" src="./pictures/Frame 21.jpg" width="274" height="270" />
-      <img class="img6" src="./pictures/pexels-umut-ülgi-10523633.jpeg" width="274" height="270" />
+      <img class="img5" src="./img/section2-img/section2-foto1.jpg" width="274" height="270" />
+      <img class="img6" src="./img/section2-img/section2-foto2.jpg" width="274" height="270" />
     </div>
     <div class="btn">
       <button type="button" class="button white">
         <svg width="32" height="32">
-          <use href="./pictures/icons.svg#icon-arrow-left"></use>
+          <use href="../img/icons-sprite.svg#icon-left-arrow-slider"></use>
         </svg>
       </button>
       <button type="button" class="button white">
         <svg width="32" height="32">
-          <use href="./pictures/icons.svg#icon-arrow-right"></use>
+          <use href="../img/icons-sprite.svg#icon-rigth-arrow-slider"></use>
         </svg>
       </button>
     </div>
