--- a/src/partials/home-page-section1.html
+++ b/src/partials/home-page-section1.html
@@ -33,7 +33,7 @@
       </button>
       <button type="button" class="button">
         <svg width="32" height="32">
-          <use href="../img/icons-sprite.svg#icon-rigth-arrow-slider"></use>
+          <use href="./img/icons-sprite.svg#icon-rigth-arrow-slider"></use>
         </svg>
       </button>
     </div>
