--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,6 +3,7 @@
 @import url("./home-page-section1.css");
 @import url("./home-page-section2.css");
 @import url("./home-page-section3.css");
+@import url("./home-page-section4.css");
 
 @import url("./location.css");
 @import url("./locationmobile.css");
