--- a/src/partials/home-page-section2.html
+++ b/src/partials/home-page-section2.html
@@ -1,33 +1,63 @@
-<section class="food-section">
-  <div class="food-container">
-    <div class="food-text">
-      <h2 class="food-logo">MIMIHO</h2>
-      <h3 class="food-name">Ресторан</h3>
-      <p class="food-subsection">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
-        consequat duis enim velit
-        mollit.</p>
-    </div>
-    <div class="food-pictures">
-      <img class="img5" src="./pictures/Frame 21.jpg" width="274" height="270" />
-      <img class="img6" src="./pictures/pexels-umut-ülgi-10523633.jpeg" width="274" height="270" />
-    </div>
-    <div class="btn">
-      <button type="button" class="button white">
-        <svg width="32" height="32">
-          <use href="./pictures/icons.svg#icon-arrow-left"></use>
-        </svg>
-      </button>
-      <button type="button" class="button white">
-        <svg width="32" height="32">
-          <use href="./pictures/icons.svg#icon-arrow-right"></use>
-        </svg>
-      </button>
-    </div>
-    <div class="food-btn">
-      <ul class="resto-list">
-        <li class="food-item"><button type="button" class="resto-button">Забронювати столик</button></li>
-        <li class="food-item"><button type="button" class="resto-button">Переглянути меню</button></li>
+<section class="homepage-section2">
+  <div class="container-section2">
+    <h1 class="section2-logo">MIMIHO</h1>
+    <h2 class="section2-post-title">Ресторан</h2>
+    <p class="section2-description">
+      Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+      Velit officia consequat duis enim velit mollit.
+    </p>
+
+    <div class="section2-wrap">
+      <div class="section2-btn-group">
+        <button type="button" class="homepage-section2-btn">
+          Забронювати столик
+        </button>
+        <button type="button" class="homepage-section2-btn">
+          Переглянути меню
+        </button>
+      </div>
+
+      <ul class="section2-img-list">
+        <li class="section2-img-item left">
+          <img
+            src="../img/section2-img/section2-foto1.jpg"
+            alt="food"
+            class="section2-foto1"
+            width="270"
+            height="270"
+          />
+        </li>
+        <li class="section2-img-item center">
+          <img
+            src="../img/section2-img/section2-foto2.jpg"
+            alt="food"
+            class="section2-foto2"
+            width="162"
+            height="270"
+          />
+        </li>
+        <li class="section2-img-item right">
+          <img
+            src="../img/section2-img/section2-foto3.jpg"
+            alt="food"
+            class="section2-foto3"
+            width="162"
+            height="270"
+          />
+        </li>
       </ul>
+    </div>
+    <div class="section2-arrows-group">
+      <button type="button" class="slider-section2-btn">
+        <svg class="section2-arrow-icon" width="32" height="32">
+          <use href="../img/icons-sprite.svg#icon-left-arrow-slider"></use>
+        </svg>
+      </button>
+      <button type="button" class="slider-section2-btn">
+        <svg class="section2-arrow-icon" width="32" height="32">
+          <use href="../img/icons-sprite.svg#icon-rigth-arrow-slider"></use>
+        </svg>
+      </button>
     </div>
   </div>
 </section>
