--- a/src/partials/home-page-section2.html
+++ b/src/partials/home-page-section2.html
@@ -21,7 +21,7 @@
       <ul class="section2-img-list">
         <li class="section2-img-item left">
           <img
-            src="../img/section2-img/section2-foto1.jpg"
+            src="./img/section2-img/section2-foto1.jpg"
             alt="food"
             class="section2-foto1"
             width="270"
@@ -30,7 +30,7 @@
         </li>
         <li class="section2-img-item center">
           <img
-            src="../img/section2-img/section2-foto2.jpg"
+            src="./img/section2-img/section2-foto2.jpg"
             alt="food"
             class="section2-foto2"
             width="162"
@@ -39,7 +39,7 @@
         </li>
         <li class="section2-img-item right">
           <img
-            src="../img/section2-img/section2-foto3.jpg"
+            src="./img/section2-img/section2-foto3.jpg"
             alt="food"
             class="section2-foto3"
             width="162"
@@ -51,12 +51,12 @@
     <div class="section2-arrows-group">
       <button type="button" class="slider-section2-btn">
         <svg class="section2-arrow-icon" width="32" height="32">
-          <use href="../img/icons-sprite.svg#icon-left-arrow-slider"></use>
+          <use href="./img/icons-sprite.svg#icon-left-arrow-slider"></use>
         </svg>
       </button>
       <button type="button" class="slider-section2-btn">
         <svg class="section2-arrow-icon" width="32" height="32">
-          <use href="../img/icons-sprite.svg#icon-rigth-arrow-slider"></use>
+          <use href="./img/icons-sprite.svg#icon-rigth-arrow-slider"></use>
 
         </svg>
       </button>
