--- a/src/partials/home-page-section2.html
+++ b/src/partials/home-page-section2.html
@@ -21,6 +21,7 @@
       <ul class="section2-img-list">
         <li class="section2-img-item left">
           <img
+            srcset="./img/section2-img/section2-foto1@2x.jpg 2x"
             src="./img/section2-img/section2-foto1.jpg"
             alt="food"
             class="section2-foto1"
@@ -30,6 +31,7 @@
         </li>
         <li class="section2-img-item center">
           <img
+            srcset="./img/section2-img/section2-foto2@2x.jpg 2x"
             src="./img/section2-img/section2-foto2.jpg"
             alt="food"
             class="section2-foto2"
