--- a/src/partials/home-page-section1.html
+++ b/src/partials/home-page-section1.html
@@ -1,41 +1,76 @@
-<section class="restoran-section">
-  <div class="restoran-container">
-    <div class="restoran-text">
-      <h1 class="restoran-title">Amet minim mollit non</h1>
-      <h2 class="restoran-logo">MIMIHO</h2>
-      <p class="restoran-subsection">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
-        officia consequat duis enim velit
-        mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+<section class="homepage-section1">
+  <div class="container-section1">
+    <div class="section1-top-wrap">
+      <h2 class="section1-pre-title">Amet minim mollit non</h2>
+      <h2 class="section1-logo">MIMIHO</h2>
+      <p class="section1-description">
+        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+        sint. Velit officia consequat duis enim velit mollit. Exercitation
+        veniam consequat sunt nostrud amet.
+      </p>
+      <img
+        srcset="./img/section3-img/section3-foto1@2x.jpg 2x"
+        src="../img/section1-img/HP-section1-foto.jpg"
+        alt="room"
+        class="section1-foto1"
+        width="244"
+        height="322"
+      />
     </div>
-    <div class="restoran-pictures">
-      <img class="img1" src="./img/section1-img/HP-section1-foto.jpg" width="244" height="322" />
-    </div>
-    <div class="restoran-block">
-      <div class="restoran-img">
-        <img class="img2" src="./img/section1-img/HP-section1-foto2.jpg" width="200" height="278" />
+    <div class="section1-bottom-wrap">
+      <div class="wrap-group1-section1">
+        <p class="section1-description2">
+          Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+          sint. Velit officia consequat duis enim velit mollit. Exercitation
+          veniam consequat sunt nostrud amet.
+        </p>
+        <img
+          srcset="./img/section3-img/section3-foto2@2x.jpg 2x"
+          src="../img/section1-img/HP-section1-foto2.jpg"
+          alt="restaurant"
+          class="section1-foto2"
+          width="200"
+          height="278"
+        />
       </div>
-      <div class="restoran-item">
-        <p class="restoran-subsection brown">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
-          Velit officia
-          consequat duis enim velit
-          mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+
+      <div class="wrap-group2-section1">
+        <ul class="section1-image-list">
+          <li class="section1-image-item">
+            <img
+              srcset="./img/section3-img/section3-foto3@2x.jpg 2x"
+              src="../img/section1-img/HP-section1-foto3.jpg"
+              alt="photo"
+              class="section1-foto3"
+              width="245"
+              height="245"
+            />
+          </li>
+          <li class="section1-image-item">
+            <img
+              srcset="./img/section3-img/section4-foto4@2x.jpg 2x"
+              src="../img/section1-img/HP-section1-foto4.jpg"
+              alt="photo"
+              class="section1-foto4"
+              width="245"
+              height="245"
+            />
+          </li>
+        </ul>
+
+        <div class="section1-arrows">
+          <button type="button" class="section1-button left">
+            <svg class="section1-arrow icon" width="32" height="32">
+              <use href="./img/icons-sprite.svg#icon-left-arrow-slider"></use>
+            </svg>
+          </button>
+          <button type="button" class="section1-button right">
+            <svg class="section1-arrow icon" width="32" height="32">
+              <use href="./img/icons-sprite.svg#icon-rigth-arrow-slider"></use>
+            </svg>
+          </button>
+        </div>
       </div>
-    </div>
-    <div class="restoran-list">
-      <img class="img3" src="./img/section1-img/HP-section1-foto3.jpg" width="245" height="245" />
-      <img class="img4" src="./img/section1-img/HP-section1-foto4.jpg" width="245" height="245" />
-    </div>
-    <div class="restoran-btn">
-      <button type="button" class="button">
-        <svg width="32" height="32">
-          <use href="./img/icons-sprite.svg#icon-left-arrow-slider"></use>
-        </svg>
-      </button>
-      <button type="button" class="button">
-        <svg width="32" height="32">
-          <use href="./img/icons-sprite.svg#icon-rigth-arrow-slider"></use>
-        </svg>
-      </button>
     </div>
   </div>
 </section>
