--- a/src/partials/home-page-section2.html
+++ b/src/partials/home-page-section2.html
@@ -10,7 +10,7 @@
 
     <div class="section2-wrap">
       <div class="section2-btn-group">
-        <button type="button" class="homepage-section2-btn">
+        <button type="button" class="homepage-section2-btn" data-price-open>
           Забронювати столик
         </button>
         <a href="./restaurant.html"><button type="button" class="homepage-section2-btn">
