--- a/src/partials/home-page-section1.html
+++ b/src/partials/home-page-section1.html
@@ -10,7 +10,7 @@
       </p>
       <img
         srcset="./img/section3-img/section3-foto1@2x.jpg 2x"
-        src="../img/section1-img/HP-section1-foto.jpg"
+        src="./img/section1-img/HP-section1-foto.jpg"
         alt="room"
         class="section1-foto1"
         width="244"
@@ -26,7 +26,7 @@
         </p>
         <img
           srcset="./img/section3-img/section3-foto2@2x.jpg 2x"
-          src="../img/section1-img/HP-section1-foto2.jpg"
+          src="./img/section1-img/HP-section1-foto2.jpg"
           alt="restaurant"
           class="section1-foto2"
           width="200"
@@ -39,7 +39,7 @@
           <li class="section1-image-item">
             <img
               srcset="./img/section3-img/section3-foto3@2x.jpg 2x"
-              src="../img/section1-img/HP-section1-foto3.jpg"
+              src="./img/section1-img/HP-section1-foto3.jpg"
               alt="photo"
               class="section1-foto3"
               width="245"
@@ -49,7 +49,7 @@
           <li class="section1-image-item">
             <img
               srcset="./img/section3-img/section4-foto4@2x.jpg 2x"
-              src="../img/section1-img/HP-section1-foto4.jpg"
+              src="./img/section1-img/HP-section1-foto4.jpg"
               alt="photo"
               class="section1-foto4"
               width="245"
