--- a/src/partials/home-page-section4.html
+++ b/src/partials/home-page-section4.html
@@ -1,34 +1,67 @@
-<section class="hotel-section">
-  <div class="hotel-container">
-    <div class="hotel-text">
-      <h2 class="hotel-logo">MIMIHO</h2>
-      <h3 class="hotel-name">Готель</h3>
-      <p class="hotel-subsection">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
-        officia
-        consequat duis enim velit
-        mollit.</p>
+<section class="homepage-section4">
+  <div class="container-section4">
+    <h1 class="section4-logo">MIMIHO</h1>
+    <h2 class="section4-post-title">Ресторан</h2>
+    <p class="section4-description">
+      Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+      Velit officia consequat duis enim velit mollit.
+    </p>
+
+    <div class="section4-wrap">
+      <div class="section4-btn-group">
+        <button type="button" class="homepage-section4-btn" data-price-open>
+          Забронювати столик
+        </button>
+        <a href="./restaurant.html"
+          ><button type="button" class="homepage-section4-btn">
+            Переглянути меню
+          </button></a
+        >
+      </div>
+
+      <ul class="section4-img-list">
+        <li class="section4-img-item left">
+          <img
+            srcset="./img/section4-img/section4-foto1@2x.jpg 2x"
+            src="./img/section4-img/section4-foto1.jpg"
+            alt="food"
+            class="section4-foto1"
+            width="270"
+            height="270"
+          />
+        </li>
+        <li class="section4-img-item center">
+          <img
+            srcset="./img/section4-img/section4-foto2@2x.jpg 2x"
+            src="./img/section4-img/section4-foto2.jpg"
+            alt="food"
+            class="section4-foto2"
+            width="162"
+            height="270"
+          />
+        </li>
+        <li class="section4-img-item right">
+          <img
+            src="../img/section4-img/section4-foto3.jpg"
+            alt="food"
+            class="section4-foto3"
+            width="162"
+            height="270"
+          />
+        </li>
+      </ul>
     </div>
-    <div class="hotel-pictures">
-      <img class="img6" src="./img/section4-img/section4-foto1.jpg" width="274" height="270" />
-      <img class="img5" src="./img/section4-img/section4-foto2.jpg" width="274" height="270" />
-    </div>
-    <div class="btn cup">
-      <button type="button" class="button white">
-        <svg width="32" height="32">
+    <div class="section4-arrows-group">
+      <button type="button" class="slider-section4-btn">
+        <svg class="section4-arrow-icon" width="32" height="32">
           <use href="./img/icons-sprite.svg#icon-left-arrow-slider"></use>
         </svg>
       </button>
-      <button type="button" class="button white">
-        <svg width="32" height="32">
+      <button type="button" class="slider-section4-btn">
+        <svg class="section4-arrow-icon" width="32" height="32">
           <use href="./img/icons-sprite.svg#icon-rigth-arrow-slider"></use>
         </svg>
       </button>
-    </div>
-    <div class="hotel-btn">
-      <ul class="rhotel-list">
-        <li class="hotel-item"><button type="button" class="resto-button">Забронювати столик</button></li>
-        <li class="hotel-item"><button type="button" class="resto-button">Переглянути меню</button></li>
-      </ul>
     </div>
   </div>
 </section>
