--- a/src/partials/home-page-section4.html
+++ b/src/partials/home-page-section4.html
@@ -42,7 +42,7 @@
         </li>
         <li class="section4-img-item right">
           <img
-            src="../img/section4-img/section4-foto3.jpg"
+            src="./img/section4-img/section4-foto3.jpg"
             alt="food"
             class="section4-foto3"
             width="162"
