--- a/src/partials/home-page-section4.html
+++ b/src/partials/home-page-section4.html
@@ -42,6 +42,7 @@
         </li>
         <li class="section4-img-item right">
           <img
+            srcset="./img/section4-img/section4-foto3@2x.jpg 2x"
             src="./img/section4-img/section4-foto3.jpg"
             alt="food"
             class="section4-foto3"
