--- a/src/partials/home-page-section4.html
+++ b/src/partials/home-page-section4.html
@@ -12,43 +12,26 @@
         <button type="button" class="homepage-section4-btn" data-price-open>
           Забронювати столик
         </button>
-        <a href="./restaurant.html"
-          ><button type="button" class="homepage-section4-btn">
+        <a href="./restaurant.html">
+          <button type="button" class="homepage-section4-btn">
             Переглянути меню
-          </button></a
-        >
+        </a>
+        </button>
+
       </div>
 
       <ul class="section4-img-list">
         <li class="section4-img-item left">
-          <img
-            srcset="./img/section4-img/section4-foto1@2x.jpg 2x"
-            src="./img/section4-img/section4-foto1.jpg"
-            alt="food"
-            class="section4-foto1"
-            width="270"
-            height="270"
-          />
+          <img srcset="./img/section4-img/section4-foto1@2x.jpg 2x" src="./img/section4-img/section4-foto1.jpg"
+            alt="food" class="section4-foto1" width="270" height="270" />
         </li>
         <li class="section4-img-item center">
-          <img
-            srcset="./img/section4-img/section4-foto2@2x.jpg 2x"
-            src="./img/section4-img/section4-foto2.jpg"
-            alt="food"
-            class="section4-foto2"
-            width="162"
-            height="270"
-          />
+          <img srcset="./img/section4-img/section4-foto2@2x.jpg 2x" src="./img/section4-img/section4-foto2.jpg"
+            alt="food" class="section4-foto2" width="162" height="270" />
         </li>
         <li class="section4-img-item right">
-          <img
-            srcset="./img/section4-img/section4-foto3@2x.jpg 2x"
-            src="./img/section4-img/section4-foto3.jpg"
-            alt="food"
-            class="section4-foto3"
-            width="162"
-            height="270"
-          />
+          <img srcset="./img/section4-img/section4-foto3@2x.jpg 2x" src="./img/section4-img/section4-foto3.jpg"
+            alt="food" class="section4-foto3" width="162" height="270" />
         </li>
       </ul>
     </div>
