--- a/src/partials/home-page-section5.html
+++ b/src/partials/home-page-section5.html
@@ -15,7 +15,7 @@
             <svg class="location-restaurant-icon" width="12" height="20">
               <use href="./img/icons-sprite.svg#icon-phone-icon"></use>
             </svg>
-            <a class="location-restaurant-number" href="tel:095 555 95 33">095 555 95 33</a>
+            <a class="location-restaurant-number" href="tel:0955559533">095 555 95 33</a>
           </div>
         </div>
 
@@ -26,8 +26,8 @@
             <svg class="location-hotel-icon" width="12" height="20">
               <use href="./img/icons-sprite.svg#icon-phone-icon"></use>
             </svg>
-            <a class="location-hotel-number-one" href="tel:066 849 10 89">066 849 10 89</a>
-            <a class="location-hotel-number-two" href="tel:067 275 85 40">067 275 85 40</a>
+            <a class="location-hotel-number-one" href="tel:0668491089">066 849 10 89</a>
+            <a class="location-hotel-number-two" href="tel:0672758540">067 275 85 40</a>
           </div>
         </div>
 
