--- a/src/partials/home-page-section4.html
+++ b/src/partials/home-page-section4.html
@@ -9,11 +9,11 @@
 
     <div class="section4-wrap">
       <div class="section4-btn-group">
-        <button type="button" class="homepage-section4-btn" data-price-open>
-          Забронювати столик
+        <button type="button" class="homepage-section4-btn">
+          Забронювати номер
         </button>
-        <a href="./restaurant.html">
-          <button type="button" class="homepage-section4-btn">Переглянути меню</button>
+        <a href="./hotel.html">
+          <button type="button" class="homepage-section4-btn">Переглянути ціни</button>
         </a>
       </div>
 
