--- a/src/partials/home-page-section2.html
+++ b/src/partials/home-page-section2.html
@@ -65,6 +65,7 @@
     </div>
   </div>
 </section>
+                                             <!-- MODAL WINDOW -->
 
 <div class="backdrop is-hidden" data-modal-two>
   <div class="tt-modal">
